--- a/game.html
+++ b/game.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Space Shooter Demo</title>
-
+		<link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet"> 
 	<style>
 		  canvas {
     position: absolute;
@@ -21,38 +21,39 @@
   }
   .score {
     position: absolute;
-    top: 5px;
-    left: 480px;
-    color: #FF7F00;
-    font-family: Helvetica, sans-serif;
+    top: 10px;
+    left: 1200px;
+    color: red;
+    font-family: Roboto Slab, sans-serif;
     cursor: default;
   }
   .game-over {
     position: absolute;
-    top: 100px;
-    left: 210px;
-    color: #FF7F00;
-    font-family: Helvetica, sans-serif;
+    top: 250px;
+    left: 500px;
+    color: red;
+    font-family: Roboto Slab, sans-serif;
     font-size: 30px;
     cursor: default;
-    display: none;
+	display: none;
+	/* text-align: center; */
   }
   .game-over span {
-    font-size: 20px;
+    font-size: 80px;
     cursor: pointer;
     position: relative;
     left: 50px;
   }
   .game-over span:hover {
-    color: #FFD700;
+    color: red;
   }
   .loading {
     position: absolute;
-    top: 100px;
-    left: 210px;
-    color: #FF7F00;
-    font-family: Helvetica, sans-serif;
-    font-size: 30px;
+    top: 250px;
+    left: 500px;
+    color: red;
+    font-family: Roboto Slab, sans-serif;
+    font-size: 50px;
     cursor: default;
   }
 	</style>	
