--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-
-  <link rel="stylesheet" href="style.css">
+  <title>Galaxian_Hack Game Demo</title>
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet"> 
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 <div>
-  <h1>hello</h1>
+  <h1>GALAXIAN_HACK GAME</h1>
+  <form action="https://ghaithhan.github.io/project---1/game.html" class = "wrapper">
+      <button type = "submit" value ="LETS START THE GAME" class ="button">Start</button>
+  </form>
 </div>
 </body>
-<script src="js/main.js"></script>
+<!-- <script src="js/main.js"></script> -->
 </html>
